Fixed navbar issue with hamburger icon on mobile

--- a/style.css
+++ b/style.css
@@ -31,23 +31,21 @@ html, body {
 }
 
 /*Navbar styling*/
-.navbar {
+/* .navbar {
     overflow: hidden;
     background-color: #1f1d1d;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 500;
-}
+} */
 
 .navbar a {
-    float: left;
-    display: block;
+    /* float: left;
+    display: block; */
     color: white;
-    text-align: center;
-    /* padding: 12px 12px; */
-    text-decoration: none;
-    /* font-size: 18px; */
+    /* text-align: center;
+    text-decoration: none; */
 }
 
 .navbar a:hover {
@@ -250,22 +248,22 @@ html {
 }
 
 /* Responsive layout to make columns stack if screen is too narrow (ex. minimized page) */
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .media {
         max-width: 768px;
     }
     .row {
         flex-direction: column;
     }
-}
+} */
 
 /* Responsive layout to make nav links stack if screen is too narrow */
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 300px) {
     .navbar a {
         float: none;
         width: 100%;
     }
-}
+} */
 
 /* If screen is extra small adjust font */
 @media screen and (max-width: 575.99px) {
